--- a/source/profile.page
+++ b/source/profile.page
@@ -14,7 +14,7 @@ URL: profile/index.html
 -   Research Interest : Artificial Intelligence, Automated Planning and Scheduling, Heuristic Search.
     -   See [Publications](../publications/) for more details.
 -   [CV](/static/cv.pdf)
--   [PhD Thesis](/static/publications/asai-d-thesis.pdf), [Abstract](/static/publications/asai-d-abstract.pdf)
+-   [PhD Thesis (DRAFT)](/static/publications/asai-d-thesis.pdf), [Abstract](/static/publications/asai-d-abstract.pdf)
 
 # Past Interests
 
