--- a/source/profile.page
+++ b/source/profile.page
@@ -6,10 +6,11 @@ format: md
 URL: profile/index.html
 ---
 
+Masataro Asai, Ph.D
+
 <guicho2.71828-at-gmail.com>
 
--   Doctoral Student at University of Tokyo.
-    -   Department of General Systems Studies, Graduate School of Arts and Sciences.
+-   University of Tokyo., Department of General Systems Studies, Graduate School of Arts and Sciences.
 -   My advisor is [Alex Fukunaga](http://metahack.org/).
 -   Research Interest : Artificial Intelligence, Automated Planning and Scheduling, Heuristic Search.
     -   See [Publications](../publications/) for more details.
