--- a/source/profile.page
+++ b/source/profile.page
@@ -10,15 +10,16 @@ Masataro Asai, Ph.D
 
 <guicho2.71828-at-gmail.com>
 
--   Research Staff Member, IBM Research
--   [CV](/static/cv.pdf)
+-   Research Staff Member, IBM Research ([CV](/static/cv.pdf))
+-   Research Interest:
+    -   Artificial Intelligence
+    -   Neural-Symbolic Systems (Deep Learning + Classical AI)
+    -   Automated Planning and Scheduling, Heuristic Search.
 
 # Education
 
 -   University of Tokyo., Department of General Systems Studies, Graduate School of Arts and Sciences.
 -   My advisor is [Alex Fukunaga](http://metahack.org/).
--   Research Interest : Artificial Intelligence, Automated Planning and Scheduling, Heuristic Search.
-    -   See [Publications](../publications/) for more details.
 -   [PhD Thesis (DRAFT)](/static/publications/asai-d-thesis.pdf), [Abstract](/static/publications/asai-d-abstract.pdf)
 
 # Past Interests
