--- a/source/publications.page
+++ b/source/publications.page
@@ -8,6 +8,10 @@ URL: publications/index.html
 
 # Peer-Reviewed Papers (In Chronological Order)
 
+1. Asai, M: 2019. Unsupervised Grounding of Plannable First-Order Logic Representation from Images.
+   In *ICAPS-2019* . [on Arxiv.](https://arxiv.org/abs/1902.08093)
+1. Asai, M.; Kajino, H: 2019. Towards Stable Symbol Grounding with Zero-Suppressed State AutoEncoder.
+   In *ICAPS-2019* . [on Arxiv.](https://arxiv.org/abs/1903.11277)
 1. Asai, M.; Fukunaga, A: 2017. Classical Planning in Deep Latent Space:
    Bridging the Subsymbolic-Symbolic Boundary.
    In *AAAI-2018* . [Extended manuscript on Arxiv.](https://arxiv.org/abs/1705.00154)
