--- a/source/themes/mine/css/style.css
+++ b/source/themes/mine/css/style.css
@@ -24,7 +24,7 @@
     font-size: 16px; } }
 body {
   background-color: #2e3434;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Raleway", sans-serif;
   line-height: 130%;
   margin: 0; }
   body nav.navigation {
@@ -69,9 +69,14 @@ body {
         body main article header h1.pagetitle {
           font-size: 2.2em;
           font-weight: normal; }
+      body main article a:before {
+        content: "["; }
+      body main article a:after {
+        content: "]"; }
       body main article h1 {
         font-weight: normal;
-        font-family: "Comfortaa", sans-serif; }
+        font-family: "Comfortaa", sans-serif;
+        margin: 1.7em 0em 1em 0em; }
       body main article.index .index-entry {
         /* &:nth-child(even) { */
         /*     background-color: $background2 + #101010; */
@@ -88,6 +93,11 @@ body {
 a {
   text-decoration: none;
   color: #eaece5; }
+  a:hover {
+    color: #ff9797; }
+
+strong {
+  color: #eaece5; }
 
 .date {
   font-style: italic; }
@@ -101,9 +111,8 @@ pre {
   padding: .75em .5em;
   font-family: unquote mono-font; }
 
-tt {
-  font-size: .9em;
-  font-family: unquote mono-font; }
+code {
+  color: #ff9797; }
 
 blockquote {
   font-style: italic; }
