--- a/source/themes/mine/css/style.scss
+++ b/source/themes/mine/css/style.scss
@@ -15,6 +15,7 @@ $highlight:   #eaece5;
 $background1: #2e3434;
 $background2: #3e4444;
 $text:        #c0ded9;
+$link:        #ff9797;
 
 @for $i from 1 through 8 {
     @media screen and (min-width: $i*105px) {
@@ -25,7 +26,7 @@ $text:        #c0ded9;
 }
 
 $title-font: 'Comfortaa';
-$text-font: 'Montserrat';
+$text-font: 'Raleway';
 
 
 body {
@@ -91,9 +92,18 @@ body {
                     font-weight: normal;
                 }
             }
+            a {
+                &:before {
+                    content: "[";
+                }
+                &:after {
+                    content: "]";
+                }
+            }
             h1 {
                 font-weight: normal;
                 font-family: $title-font, sans-serif;
+                margin: 1.7em 0em 1em 0em;
             }
             &.index {
                 .index-entry {
@@ -124,8 +134,17 @@ body {
 
 a {
     text-decoration: none;
+    // text-decoration: underline;
+    color: $highlight;
+    &:hover {
+        color: $link;
+    }
+}
+
+strong {
     color: $highlight;
 }
+
 .date {
     font-style: italic;
 }
@@ -139,9 +158,9 @@ pre {
     padding: .75em .5em;
     font-family: (unquote mono-font);
 }
-tt {
-    font-size: .9em;
-    font-family: (unquote mono-font);
+code {
+    color: $link;
+    // font-family: (unquote mono-font);
 }
 
 blockquote {
